--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         </activity>
         <activity android:name=".Activity.ProductDetail" />
         <activity android:name=".Activity.CartActivity" />
-        <activity android:name=".Activity.TransactActivity"></activity>
+        <activity android:name=".Activity.TransactActivity" />
+        <activity android:name=".Activity.CustomerActivity" />
+        <activity android:name=".Activity.PaymentActivity"></activity>
     </application>
 
 </manifest>
